--- a/NUMPY_INTRO_LAB.ipynb
+++ b/NUMPY_INTRO_LAB.ipynb
@@ -212,10 +212,10 @@
       "execution_count": 12,
       "metadata": {
         "id": "q028YkuzckdV",
-        "outputId": "dddd2156-7a04-4146-d415-295f352e70d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dddd2156-7a04-4146-d415-295f352e70d9"
       },
       "outputs": [
         {
@@ -250,10 +250,10 @@
       "execution_count": 14,
       "metadata": {
         "id": "yqcr3kA3ckdV",
-        "outputId": "5b647a73-b9b6-41f6-d7b1-054766796f3f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5b647a73-b9b6-41f6-d7b1-054766796f3f"
       },
       "outputs": [
         {
@@ -285,13 +285,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 35,
       "metadata": {
         "id": "xG3xEz7DckdW",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c0d0da70-4988-45b7-c191-0a882d7776ee"
+        "outputId": "37e0c650-c580-427f-cc45-477010f74bb0"
       },
       "outputs": [
         {
@@ -306,8 +306,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[  0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ],\n",
-              "       [  1.  , 105.  ,  47.  ,  85.4 ,   1.75,   5.1 ,  63.  ,  33.  ],\n",
+              "array([[  1.  , 105.  ,  47.  ,  85.4 ,   1.75,   5.1 ,  63.  ,  33.  ],\n",
               "       [  2.  , 115.  ,  49.  ,  94.2 ,   2.1 ,   3.8 ,  70.  ,  14.  ],\n",
               "       [  3.  , 116.  ,  49.  ,  95.3 ,   1.98,   8.2 ,  72.  ,  10.  ],\n",
               "       [  4.  , 117.  ,  50.  ,  94.7 ,   2.01,   5.8 ,  73.  ,  99.  ],\n",
@@ -330,7 +329,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 35
         }
       ],
       "source": [
@@ -351,7 +350,7 @@
         "# Your code here\n",
         "# Pseudocode outline below\n",
         "#1) Create a matrix of zeros that is the same size of the file\n",
-        "zero_matrix = np.zeros((n_rows, n_cols))\n",
+        "zero_matrix = np.zeros((n_rows-1, n_cols))\n",
         "# zero_matrix\n",
         "#2) Iterate through the file: \"for line in f:\" Hint: using enumerate will also be required\n",
         "#3) Update each row of the matrix with the new stream of data\n",
@@ -361,7 +360,7 @@
         "    if index == 0:\n",
         "        continue\n",
         "    else:\n",
-        "        zero_matrix[index] = line.split('\\t')\n",
+        "        zero_matrix[index-1] = line.split('\\t')\n",
         "\n",
         "#4) Preview your results; you should now have a NumPy matrix with the data from the file\n",
         "\n",
@@ -407,6 +406,7 @@
     },
     "colab": {
       "provenance": [],
+      "name": "NUMPY_INTRO_LAB.ipynb",
       "include_colab_link": true
     }
   },
